--- a/spada.uwgm.html
+++ b/spada.uwgm.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </div>
-      <div style="display: none"><a href="https://jasabuketmalang.com/">Jasa Buket Malang</a>
+      <div style="display: none"><a href="https://jasabuketmalang.com/">Jasa Buket Malang</a></div>
         <!-- Social Icons-->
         <!-- For more icon options, visit https://fontawesome.com/icons?d=gallery&p=2&s=brands-->
         <div class="social-icons">
