--- a/spada.uwgm.html
+++ b/spada.uwgm.html
@@ -37,7 +37,6 @@
                 </div>
             </div>
         </div>
-      <div style="display: none"><a href="https://jasabuketmalang.com/">Jasa Buket Malang</a></div>
         <!-- Social Icons-->
         <!-- For more icon options, visit https://fontawesome.com/icons?d=gallery&p=2&s=brands-->
         <div class="social-icons">
@@ -56,5 +55,5 @@
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    </body>
+            <div style="display: none"><a href="https://jasabuketmalang.com/">Jasa Buket Malang</a>
 </html>
